--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -77,17 +77,15 @@
 
 
 		<!-- title -->
-		<div style=" padding:50px 50px 10px">
+		<div style=" padding:50px 10px 10px">
 			<!-- 中文 -->
 			<h1 class="Center" style="color:#666666">DIGITIMES INC.</h1>
 			<hr>
 			<!-- 大分類頁 -->
 			<div class="sorts">
-				<a href="#" onclick="openPage('ad', this, '#6C6C6C')" class="tablink sort_btn text-white text17">廣告</a>
-				<a href="#" onclick="openPage('kv', this, '#6C6C6C')" class="tablink sort_btn text-white text17"
-					id="defaultOpen">主視覺</a>
-				<a href="#" onclick="openPage('layout', this, '#6C6C6C')"
-					class="tablink sort_btn text-white text17">布置物</a>
+				<a href="#" onclick="openPage('ad', this, '#6C6C6C')" class="tablink sort_btn text-white rwdh6">廣告</a>
+				<a href="#" onclick="openPage('kv', this, '#6C6C6C')" class="tablink sort_btn text-white rwdh6"	id="defaultOpen">主視覺</a>
+				<a href="#" onclick="openPage('layout', this, '#6C6C6C')"	class="tablink sort_btn text-white rwdh6">布置物</a>
 			</div>
 		</div>
 
@@ -96,22 +94,22 @@
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
-					<div class="sort_cnt">
+					<div class="sort_cnt" style="position: relative; top: -50px;">
 						<div class="sorts" id="sponsorSort">
 							<div class="item">
-								<a id="all" data-cat="all" class="item_link sort_btn_s text-white text15">所有作品</a>
+								<a id="all" data-cat="all" class="item_link sort_btn_s text-white rwdtxt">所有作品</a>
 							</div>
 							<div class="item">
 								<a id="Co_Sponsor" data-cat="CoSponsor"
-									class="item_link sort_btn_s text-white text15">平面廣告</a>
+									class="item_link sort_btn_s text-white rwdtxt">平面廣告</a>
 							</div>
 							<div class="item">
 								<a id="Co_Oganizer" data-cat="CoOganizer"
-									class="item_link sort_btn_s text-white text15">edm</a>
+									class="item_link sort_btn_s text-white rwdtxt">edm</a>
 							</div>
 							<div class="item">
 								<a id="Main_Sponsor" data-cat="Main"
-									class="item_link sort_btn_s text-white text15">廣告</a>
+									class="item_link sort_btn_s text-white rwdtxt">廣告</a>
 							</div>
 						</div>
 					</div>
@@ -122,6 +120,15 @@
 								<!-- 廣告 -->
 								<div class="spr_item" data-cat="Main">
 									<img src="img\digitimes\ad\ad\FB.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\限動.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1121023.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120972_336-x-280.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120697R5_1080-1080-11.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120697R5_336-90.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120498_336-280.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\資服banner_W336-H280.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120683_728-90.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120781.gif" style="width:100%" class="image">
 								</div>
 								<!-- 平面廣告 -->
 								<div class="spr_item" data-cat="CoSponsor">
@@ -140,8 +147,14 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="spr_item" data-cat="Main">
+									<img src="img\digitimes\ad\ad\800X320.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121294-1_336-280.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121294-1_336-90.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120648_1080.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\1120584ADIR4_336-x-280.gif" style="width:100%">
-									<img src="img\digitimes\ad\ad\1120584ADIR4_336-x-90.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120587R2.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120584ADIR4_336-x-280.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120604_R0.jpg" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
 								<div class="spr_item" data-cat="CoSponsor">
@@ -158,7 +171,14 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="spr_item" data-cat="Main">
+									<img src="img\digitimes\ad\ad\1120968_R2.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121043_336 x 90b.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120853_960x100.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120801R2_矩形大方塊-(336X280).gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\1120570_336-280矩形大方塊.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120718.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120746_728_90.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\康耐視台中Banner.gif" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
 								<div class="spr_item" data-cat="CoSponsor">
