--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -121,8 +121,6 @@
 								<div class="spr_item" data-cat="Main">
 									<img src="img\digitimes\ad\ad\FB.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\限動.jpg" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\1121023.jpg" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\1120972_336-x-280.gif" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\1120697R5_1080-1080-11.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\1120697R5_336-90.gif" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\1120498_336-280.gif" style="width:100%" class="image">
@@ -194,7 +192,14 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="spr_item" data-cat="Main">
-									<img src="img\digitimes\ad\ad\1120498_336-280.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120959R3_336-280.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121203R2_Keynote banner-1200-600.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121023.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120972_336-x-280.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120855_1280x330.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120875R1.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\1120973.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\廠辦維運與綠色工廠Banner_3.jpg" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
 								<div class="spr_item" data-cat="CoSponsor">
