20230812更新7月作品完成

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -84,8 +84,10 @@
 			<!-- 大分類頁 -->
 			<div class="sorts">
 				<a href="#" onclick="openPage('ad', this, '#6C6C6C')" class="tablink sort_btn text-white rwdh6">廣告</a>
-				<a href="#" onclick="openPage('kv', this, '#6C6C6C')" class="tablink sort_btn text-white rwdh6"	id="defaultOpen">主視覺</a>
-				<a href="#" onclick="openPage('layout', this, '#6C6C6C')"	class="tablink sort_btn text-white rwdh6">布置物</a>
+				<a href="#" onclick="openPage('kv', this, '#6C6C6C')" class="tablink sort_btn text-white rwdh6"
+					id="defaultOpen">主視覺</a>
+				<a href="#" onclick="openPage('layout', this, '#6C6C6C')"
+					class="tablink sort_btn text-white rwdh6">布置物</a>
 			</div>
 		</div>
 
@@ -95,39 +97,40 @@
 				<div>
 					<!-- 子分類 -->
 					<div class="sort_cnt" style="position: relative; top: -50px;">
-						<div class="sorts" id="sponsorSort">
+						<div class="sorts" id="Ad_Sort">
 							<div class="item">
 								<a id="all" data-cat="all" class="item_link sort_btn_s text-white rwdtxt">所有作品</a>
 							</div>
 							<div class="item">
-								<a id="Co_Sponsor" data-cat="CoSponsor"
+								<a id="Print_ad" data-cat="print_ad"
 									class="item_link sort_btn_s text-white rwdtxt">平面廣告</a>
 							</div>
 							<div class="item">
-								<a id="Co_Oganizer" data-cat="CoOganizer"
-									class="item_link sort_btn_s text-white rwdtxt">edm</a>
+								<a id="Edm" data-cat="edm" class="item_link sort_btn_s text-white rwdtxt">edm</a>
 							</div>
 							<div class="item">
-								<a id="Main_Sponsor" data-cat="Main"
-									class="item_link sort_btn_s text-white rwdtxt">廣告</a>
+								<a id="Ad" data-cat="ad" class="item_link sort_btn_s text-white rwdtxt">廣告</a>
 							</div>
 						</div>
 					</div>
-					<div class="sponsor_cnt">
-						<div class="sponsors" id="sponsorCnt">
+					<div>
+						<div class="sponsors" id="AdCnt">
 							<!-- 左行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
-								<div class="spr_item" data-cat="Main">
+								<div class="Ad_item" data-cat="ad">
 									<img src="img\digitimes\ad\ad\FB.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\限動.jpg" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\1120697R5_1080-1080-11.jpg" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\1120697R5_336-90.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120697R5_1080-1080-11.jpg" style="width:100%"
+										class="image">
+									<img src="img\digitimes\ad\ad\1120697R5_336-90.gif" style="width:100%"
+										class="image">
 									<img src="img\digitimes\ad\ad\1120498_336-280.gif" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\資服banner_W336-H280.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\資服banner_W336-H280.jpg" style="width:100%"
+										class="image">
 								</div>
 								<!-- 平面廣告 -->
-								<div class="spr_item" data-cat="CoSponsor">
+								<div class="Ad_item" data-cat="print_ad">
 									<img src="img\digitimes\ad\print_ad\1121439_ST全十.jpg" style="width:100%"
 										class="image">
 									<img src="img\digitimes\ad\print_ad\馭雲論壇全十.jpg" style="width:100%" class="image">
@@ -135,14 +138,14 @@
 
 								</div>
 								<!-- edm -->
-								<div class="spr_item" data-cat="CoOganizer">
+								<div class="Ad_item" data-cat="edm">
 									<img src="img\digitimes\ad\edm\1120630edm.jpg" style="width:100%" class="image">
 								</div>
 							</div>
 							<!-- 中1行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
-								<div class="spr_item" data-cat="Main">
+								<div class="Ad_item" data-cat="ad">
 									<img src="img\digitimes\ad\ad\800X320.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\1121294-1_336-280.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\1121294-1_336-90.gif" style="width:100%">
@@ -152,20 +155,20 @@
 									<img src="img\digitimes\ad\ad\1120604_R0.jpg" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
-								<div class="spr_item" data-cat="CoSponsor">
+								<div class="Ad_item" data-cat="print_ad">
 									<img src="img\digitimes\ad\print_ad\智慧機械與智動化_全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\amr全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\1120571R2.jpg" style="width:100%">
 								</div>
 								<!-- edm -->
-								<div class="spr_item" data-cat="CoOganizer">
+								<div class="Ad_item" data-cat="edm">
 									<img src="img\digitimes\ad\edm\1121017R1.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中2行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
-								<div class="spr_item" data-cat="Main">
+								<div class="Ad_item" data-cat="ad">
 									<img src="img\digitimes\ad\ad\1120968_R2.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\1121043_336 x 90b.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\1120853_960x100.jpg" style="width:100%">
@@ -178,36 +181,38 @@
 									<img src="img\digitimes\ad\ad\康耐視台中Banner.gif" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
-								<div class="spr_item" data-cat="CoSponsor">
+								<div class="Ad_item" data-cat="print_ad">
 									<img src="img\digitimes\ad\print_ad\1120649R13_全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\1120698R2_半十.jpg" style="width:100%">
 								</div>
 								<!-- edm -->
-								<div class="spr_item" data-cat="CoOganizer">
+								<div class="Ad_item" data-cat="edm">
 									<img src="img\digitimes\ad\edm\0315西門子EDA2.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 右行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
-								<div class="spr_item" data-cat="Main">
+								<div class="Ad_item" data-cat="ad">
 									<img src="img\digitimes\ad\ad\1120959R3_336-280.gif" style="width:100%">
-									<img src="img\digitimes\ad\ad\1121203R2_Keynote banner-1200-600.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\1121203R2_Keynote banner-1200-600.jpg"
+										style="width:100%">
 									<img src="img\digitimes\ad\ad\1121023.jpg" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\1120972_336-x-280.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\1120972_336-x-280.gif" style="width:100%"
+										class="image">
 									<img src="img\digitimes\ad\ad\1120855_1280x330.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\1120875R1.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\1120973.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\廠辦維運與綠色工廠Banner_3.jpg" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
-								<div class="spr_item" data-cat="CoSponsor">
+								<div class="Ad_item" data-cat="print_ad">
 									<img src="img\digitimes\ad\print_ad\Manufacturing Technology Summit.jpg"
 										style="width:100%">
 									<img src="img\digitimes\ad\print_ad\全十.jpg" style="width:100%">
 								</div>
 								<!-- edm -->
-								<div class="spr_item" data-cat="CoOganizer">
+								<div class="Ad_item" data-cat="edm">
 									<img src="img\digitimes\ad\edm\edm.jpg" style="width:100%">
 								</div>
 							</div>
@@ -244,6 +249,99 @@
 				<img src="" style="width:100%">
 				<img src="" style="width:100%">
 			</div>
+		</div>
+
+		<!-- Projects Grid ,layout ------------------------------------------------------------------------------->
+		<div class="w3-row-padding tabcontent" id="layout" style=" padding: 10px;">
+			<section class="sc_sponsor main_sc">
+				<div>
+					<!-- 子分類 -->
+					<div class="sort_cnt" style="position: relative; top: -50px;">
+						<div class="sorts" id="layoutSort">
+							<div class="item">
+								<a id="all" data-cat="all" class="layout_link sort_btn_s text-white rwdtxt">所有作品</a>
+							</div>
+							<div class="item">
+								<a id="digital" data-cat="digital"
+									class="layout_link sort_btn_s text-white rwdtxt">字卡</a>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="sponsors" id="layoutCnt">
+							<!-- 左行 -->
+							<div class="w3-quarter" style=" padding: 15px;">
+								<!-- print -->
+								<div class="ly_item" data-cat="print">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1121373凱德.jpg"style="width:100%" class="image">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120998R2_2.jpg"style="width:100%" class="image">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120632邁達特.jpg"style="width:100%" class="image">
+								</div>
+								<!-- digital -->
+								<div class="ly_item" data-cat="digital">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121171.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121058.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120944活動預告字卡.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120786.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\0317SiFive.jpg" style="width:100%">
+								</div>
+							</div>
+							<!-- 中1行 -->
+							<div class="w3-quarter" style=" padding: 15px;">
+								<!-- print -->
+								<div class="ly_item" data-cat="Main">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\凱德PARTNER.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120930研杰.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120632邁達特1.jpg"style="width:100%">
+								</div>
+								<!-- digital -->
+								<div class="ly_item" data-cat="digital">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121187.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120944.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120916_片頭.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\0412DWebinar.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\泓格線上論壇_影片背景.jpg" style="width:100%">
+								</div>
+							</div>
+							<!-- 中2行 -->
+							<div class="w3-quarter" style=" padding: 15px;">
+								<!-- print -->
+								<div class="ly_item" data-cat="Main">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1121109R1_背板.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120880新立.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120532Mouser_背板.jpg"style="width:100%">
+								</div>
+								<!-- digital -->
+								<div class="ly_item" data-cat="digital">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\ADI片尾字卡.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121089.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121052_內頁2.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120916.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120534.jpg" style="width:100%">
+								</div>
+							</div>
+
+							<!-- 右行 -->
+							<div class="w3-quarter" style=" padding: 15px;">
+								<!-- print -->
+								<div class="ly_item" data-cat="Main">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\背板.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120835R1_2.jpg"style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120421AI EXPO 學習歷程_黑.jpg"style="width:100%">
+								</div>
+								<!-- digital -->
+								<div class="ly_item" data-cat="digital">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\cta_片頭.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121089_E09.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121052_內頁3.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120941.jpg" style="width:100%">
+									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120690.jpg" style="width:100%">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 
 
@@ -292,31 +390,60 @@
 
 	</script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!--子相簿分類:ad-->
 	<script type="text/javascript">
-		var logo = {
+		var ad = {
 			sort: function (items) {
-				$('#sponsorCnt').find('.spr_item').not(items).fadeOut(500);
+				$('#AdCnt').find('.Ad_item').not(items).fadeOut(500);
 				items.fadeIn(500);
 			},
 			showAll: function (items) {
 				items.fadeIn(500);
 			},
 			doSort: function () {
-				$('#sponsorSort').on('click', '.item_link', function () {
-					$('#sponsorSort .item_link').removeClass('is_active');
+				$('#Ad_Sort').on('click', '.item_link', function () {
+					$('#Ad_Sort .item_link').removeClass('is_active');
 					$(this).addClass('is_active');
 					// console.log($(this).prop('id'));
 					var $sort = $(this);
 					if ($sort.is('#all')) {
-						logo.showAll($('.spr_item', '#sponsorCnt'));
+						ad.showAll($('.Ad_item', '#AdCnt'));
 					} else {
-						var items = $('.spr_item[data-cat=' + $sort.data('cat') + ']', '#sponsorCnt');
-						logo.sort(items);
+						var items = $('.Ad_item[data-cat=' + $sort.data('cat') + ']', '#AdCnt');
+						ad.sort(items);
 					}
 				});
 			}
 		};
-		logo.doSort();
+		ad.doSort();
+		;
+	</script>
+	<!--子相簿分類:layout-->
+	<script type="text/javascript">
+		var layout = {
+			sort: function (items) {
+				$('#layoutCnt').find('.ly_item').not(items).fadeOut(500);
+				items.fadeIn(500);
+			},
+			showAll: function (items) {
+				items.fadeIn(500);
+			},
+			doSort: function () {
+				$('#layoutSort').on('click', '.layout_link', function () {
+					$('#layoutSort .layout_link').removeClass('is_active');
+					$(this).addClass('is_active');
+					// console.log($(this).prop('id'));
+					var $sort = $(this);
+					if ($sort.is('#all')) {
+						layout.showAll($('.ly_item', '#layoutCnt'));
+					} else {
+						var items = $('.ly_item[data-cat=' + $sort.data('cat') + ']', '#layoutCnt');
+						layout.sort(items);
+					}
+				});
+			}
+		};
+		layout.doSort();
 		;
 	</script>
 
