--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -273,51 +273,51 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1121373凱德.jpg"style="width:100%" class="image">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120998R2_2.jpg"style="width:100%" class="image">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120632邁達特.jpg"style="width:100%" class="image">
+									<img src="img\digitimes\layout\print\1121373凱德.jpg"style="width:100%" class="image">
+									<img src="img\digitimes\layout\print\1120998R2_2.jpg"style="width:100%" class="image">
+									<img src="img\digitimes\layout\print\1120632邁達特.jpg"style="width:100%" class="image">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121171.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121058.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120944活動預告字卡.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120786.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\0317SiFive.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121171.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121058.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120944活動預告字卡.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120786.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\0317SiFive.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中1行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\凱德PARTNER.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120930研杰.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120632邁達特1.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\凱德PARTNER.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120930研杰.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120632邁達特1.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121187.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120944.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120916_片頭.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\0412DWebinar.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\泓格線上論壇_影片背景.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121187.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120944.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120916_片頭.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\0412DWebinar.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\泓格線上論壇_影片背景.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中2行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1121109R1_背板.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120880新立.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120532Mouser_背板.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1121109R1_背板.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120880新立.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120532Mouser_背板.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\ADI片尾字卡.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121089.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121052_內頁2.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120916.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120534.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\ADI片尾字卡.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121089.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121052_內頁2.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120916.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120534.jpg" style="width:100%">
 								</div>
 							</div>
 
@@ -325,17 +325,17 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\背板.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120835R1_2.jpg"style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\print\1120421AI EXPO 學習歷程_黑.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\背板.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120835R1_2.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\1120421AI EXPO 學習歷程_黑.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\cta_片頭.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121089_E09.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1121052_內頁3.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120941.jpg" style="width:100%">
-									<img src="C:\Users\user\Desktop\SourceTree_for_personal_web\PersonalWeb2023\img\digitimes\layout\digital\1120690.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\cta_片頭.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121089_E09.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1121052_內頁3.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120941.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\1120690.jpg" style="width:100%">
 								</div>
 							</div>
 						</div>
