20231008更新接案作品資訊，大椽頁兩側排版樣式

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -92,7 +92,7 @@
 		</div>
 
 		<!-- Projects Grid ,ad ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="ad" style=" padding: 10px;">
+		<div class="w3-row-padding tabcontent" id="ad" style="margin-right: 50px; margin-left: 50px;">
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
@@ -253,7 +253,7 @@
 		</div>
 
 		<!-- Projects Grid ,kv ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="kv" style=" padding: 10px;">
+		<div class="w3-row-padding tabcontent" id="kv" style="margin-right: 50px; margin-left: 50px;">
 			<!-- 左行 -->
 			<div class="w3-third">
 				<!-- 2023_8 -->
@@ -279,7 +279,7 @@
 		</div>
 
 		<!-- Projects Grid ,layout ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="layout" style=" padding: 10px;">
+		<div class="w3-row-padding tabcontent" id="layout" style="margin-right: 50px; margin-left: 50px;">
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
